# modal-mcp-server

./: README.md  pyproject.toml
src/modal_mcp/: server.py
tests/: test_server.py
